# EmotionalHandwashingAssistant

./: .gitignore  README.md  README.md~
data/: OutputMappingResult.csv
lib/FacialExpressionRecoganizer/: README.md~
lib/Grabber_TrackingModel/: CMakeLists.txt  README.md  README.md~  configCamera.txt  defines.h  grab.cpp  grab.h  hand_tracker.hpp  main.cpp  tracker.cpp  tracker.hpp  tracker_message.pb.cc  tracker_message.pb.h  tracker_message.proto  tracking_model.h  tree.cpp  tree.h
lib/Grabber_TrackingModel (copy)/: README.md  configCamera.txt
lib/Grabber_TrackingModel (copy)/cmake/Modules/: FindGlib2.cmake  FindOpenNI.cmake
lib/Grabber_TrackingModel (copy)/spearmint/dtreemode/: config.pb
lib/Grabber_TrackingModel (copy)/trees/: T0-14-01-25_00-50-57_1664I_12D_0G_3000C_3000S_250O_100T.txt
lib/Grabber_TrackingModel_copy/spearmint/dtree/: dtree.py
lib/Grabber_TrackingModel_copy/spearmint/spearmint/chooser/: .gitignore
lib/Grabber_TrackingModel_copy/spearmint/spearmint/driver/: .gitignore
lib/PromptPlayer/: README.md
lib/bayesact/: DOCUMENTATION.txt  README  assistant.py  bayesact.py  bayesactassistant.py  bayesactgui.py  bayesactinteractive.py  bayesactlearner.py  bayesactlib.py  bayesactlib_unstable.py  bayesactmother.py  bayesactself.py  bayesactsim.py  changes.txt  compare  corobots3.py  corobots5.py  discretetutor.py  do_pwid_simulations  doit  intxt  mother.py  mother2.py  pomcp.py  pwid.py  pwid_sims.boss.txt  pwid_sims.elder-command-mind.txt  pwid_sims.elder_ak0.txt  pwid_sims.elder_ak2_boss.txt  pwid_sims.elder_ak2_patient.txt  pwid_sims.patient-command-mind.txt  pwid_sims.patient-curse-curse.txt  pwid_sims.patient.txt  shit  tutorgui2.py
lib/bayesact/bayesact-cpp/: README  agent.cpp  agent.h  makefile  multivariatenormal.h  performance-test.cpp  py-wrapper.cpp  settingdefaults.h  settings.cpp  settings.csv  settings.h  settingsGen  state.cpp  state.h  taumappings.cpp  taumappings.h  test.cpp  transientdynamics.cpp  transientdynamics.h  transientvariable.cpp  transientvariable.h  values.h  xvar.h
lib/bayesact/bayesact-cpp/settings-parser/: main.cpp  settingsheader.cpp  settingsheader.h  values.h  variablename.cpp  variablename.h
lib/bayesact/gui/: __init__.py  cBalloonTip.py  cBayesactInteractive.py  cBayesactInteractiveGui.py  cBayesactSim.py  cBayesactSimBuffer.py  cBayesactSimGui.py  cConstants.py  cEPAListBox.py  cEnum.py  cGuiTabs.py  cIdentitiesListBox.py  cNumericValidatorTextBox.py  cOptions.py  cOptions2D.py  cOptions3D.py  cOptionsAgent.py  cOptionsBayesactInteractive.py  cOptionsBayesactSim.py  cPlot.py  cPlot2D.py  cPlot3D.py  cPlotBayesactSim.py  cPlotBayesactThread.py  cPlotEPA.py  cPlotEPA2D.py  cPlotEPA3D.py  cSimInteractiveTabs.py  main.py
lib/bayesact/output/: bactsim1.txt  bestlabels.m  extract-samples-data  extract-samples-data~  plotsamples.m  samples1.avi  samples1.txt
lib/bayesact/output/pwid_sims_may2014/orig_defb/: pwid_sims.patient-command-mind.txt  pwid_sims.patient-curse-curse.txt  pwid_sims.patient.txt
lib/csv_parser/: README.md
lib/hand_tracker/: .cproject  .gitignore  .gitignore~  .project  CMakeLists.txt  README.md  config.txt  defines.h  grab.cpp  grab.h  hand_tracker.cpp  hand_tracker.hpp  hand_tracker_message.pb.cc  hand_tracker_message.pb.h  hand_tracker_message.proto  kalmanfilter.cpp  kalmanfilter.h  main.cpp  regions.txt  regions_handshelf.txt  regions_kitchen_chil.txt  regions_steve.txt  tree.cpp  tree.h
lib/hand_tracker/cmake/Modules/: FindGlib.cmake  FindNite.cmake  FindOpenCV.cmake
lib/hand_tracker/spearmint/dtree/: config.pb
lib/hand_tracker/spearmint/dtreemode/: dtreemode.py
lib/hand_tracker/spearmint/spearmint/: .gitignore
lib/hand_tracker/trees/: T1-14-01-25_02-00-13_1589I_12D_0G_3000C_3000S_250O_100T.txt  T2-14-01-25_00-52-40_1718I_12D_0G_3000C_3000S_250O_100T.txt
src/: .gitignore  BayesActClient.cpp  BayesActClient.hpp  BayesActMessage.pb.cc  BayesActMessage.pb.h  BayesActMessage.proto  BayesActMessage_pb2.py  EHwA  FrameAnalyzer.cpp  FrameAnalyzer.hpp  GUI.hpp  Makefile  Makefile.txt  Makefile~  PromptSelecter.cpp  PromptSelecter.hpp  bayesact.py  bayesact_client.cpp  bayesact_client.hpp  bayesact_message.proto  bayesact_message_pb2.py  bayesact_server_stub.py  buffer.cpp  buffer.hpp  defines.cpp  defines.hpp  experiment_server.py  frame_analyzer.cpp  frame_analyzer.hpp  gui.hpp  helloworld  helloworld.cpp  main.cpp  prompt_player  prompt_player.cpp  prompt_player.hpp  prompt_selecter.cpp  prompt_selecter.hpp  sample.client.out  sample.server.out  (+12 more)
src/EPACalculator/: EPACalculator.cpp  EPACalculator.hpp  epa_calculator.cpp  epa_calculator.hpp
